Fix icon and link alignement

--- a/css/beneos.css
+++ b/css/beneos.css
@@ -504,7 +504,8 @@
 
 .beneos-search-moulinette-icons {
   max-height: 24px;
-  margin-top: -6px;
+  margin-top: -8px;
+  margin-left: 32px;
   border: 0;
   opacity: 50%;
 }
@@ -594,6 +595,7 @@
 
 .beneos-search-small-text a {
   color: #3e0706;
+  display: flex;
 }
 
 .beneos-not-installed {
